--- a/Respostas_Lista1.ipynb
+++ b/Respostas_Lista1.ipynb
@@ -400,6 +400,7 @@
    "outputs": [],
    "source": [
     "# Quesão 07\n",
+    "\n",
     "# O Hipermercado Tabajara está com uma promoção de carnes que é imperdível. Confira:\n",
     "\n",
     "# |------------|-----------------|------------------|\n",
@@ -478,6 +479,27 @@
     "print(f\"Valor a pagar: R$ {preco_final:.2f}\")\n",
     "\n",
     "print(\"\\n# == Obrigado Pela Preferência == #\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "f2090278-212a-4c68-b47c-ea8fa4d8dfce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Questão 08\n",
+    "\n",
+    "# Faça um programa que faça 5 perguntas para uma pessoa sobre um crime. As perguntas são:\n",
+    "\n",
+    "# \"Telefonou para a vítima?\"\n",
+    "# \"Esteve no local do crime?\"\n",
+    "# \"Mora perto da vítima?\"\n",
+    "# \"Devia para a vítima?\"\n",
+    "# \"Já trabalhou com a vítima?\"\n",
+    "# O programa deve no final emitir uma classificação sobre a participação da pessoa no crime. \n",
+    "# Se a pessoa responder positivamente a 2 questões ela deve ser classificada como \"Suspeita\", entre 3 e 4 como \"Cúmplice\" e 5 como \"Assassino\". \n",
+    "# Caso contrário, ele será classificado como \"Inocente\"."
    ]
   },
   {
